# poetry2nix-packaging-bug

./: default.nix  pyproject.toml
nix/: sources.json
