[tool.poetry]
name = "poetry2nix-packaging"
version = "0.1.0"
description = ""
authors = ["Andreas Rammhold <andreas@rammhold.de>"]

[tool.poetry.dependencies]
python = "^3.7"
packaging = "^20.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
